--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -6,7 +6,7 @@
         
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
 
-        <link rel="stylesheet" href="css/icon-font.css">
+        <!-- <link rel="stylesheet" href="css/icon-font.css"> -->
         <link rel="stylesheet" href="css/style.css">
         <link rel="shortcut icon" type="image/png" href="img/favicon.png">
         
@@ -283,8 +283,8 @@
                                                 I had the best week together with my family
                                         </h3>
                                         <p>
-                                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque, vero, possimus et saepe, libero quae accusantium magni asperiores quos aperiam iste. Cum tempora, nesciunt placeat provident quibusdam minima necessitatibus veritatis!
-                                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque, vero, possimus et saepe, libero quae accusantium magni asperiores quos aperiam iste. Cum tempora, nesciunt placeat provident quibusdam minima necessitatibus veritatis!
+                                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque, vero, possimus et saepe!
+                                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque, vero, possimus et saepe veritatis!
                                         </p>
                                 </div>
                                 </div>
